# bob

./: .all-contributorsrc  .gitignore  README.md  copy_common.py  copy_services.py  create_module.py  database.db  db_creator.py  dbus-org.bluez.service   docker-compose.yml  install.py  install.sh  modifying-bob.md  pyproject.toml  splashscreen.service  start.py  start.sh  start_all.py  start_core.sh  start_new.sh  start_single.py  update.sh
.github/workflows/: ci.yml
LED/: led.service
LED/src/: main.py  settings.py
accelerometer/: Dockerfile  accelerometer.service  package_list.txt
accelerometer/src/: accelerometer.py  config.json  main.py  mqtt.py  requirements.txt  settings.py
ant/: Dockerfile  ant.service  package_list.txt
ant/src/: ant_manager.py  heartrate.py  main.py  powermeter.py  sensor.py  settings.py  speed.py  timer.py
bobcli/: README.md  pyproject.toml
bobcli/bobcli/: main.py  systemdlib.py
bobui/: README.md
bobui/src/: bobui.conf  cli.py  server.py
bt/: Dockerfile  README.md  authorized_devices.conf  bt.service  package_list.txt  start.sh  start2.sh
bt/src/: main.py  taurusBluetooth.py
common_files/: bikeData.py  common_settings.py  message.py  mqtt.py  sensor.py  settings.py
communication/: Dockerfile  communication.service
communication/src/: bikeData.py  httpService.py  main.py  mqtt.py  settings.json  settings.py
config/: ant.json  bikename.json  video.json
csv/: Dockerfile  README.md  csv.service
csv/src/: csv.py  main.py
dbCreator/: creator.py
example_module/src/: .gitignore  main.py  settings.py
external_mqtt/: Dockerfile  external_mqtt.service
external_mqtt/src/: main.py  settings.py
gear/: Dockerfile  gear.service
gear/src/: arduino_serial.py  gear.py  main.py  settings.py
gear_old/: gear_old.service
gear_old/src/: arduino_serial.py  main.py  settings.py
gpio/: Dockerfile  gpio.service
gpio/src/: gpio.py  gpio3.py  main.py  settings.py
gps/: .gitignore  Dockerfile  gps.service
gps/src/: gpsinterface.py  main.py  mqtt.py  settings.py
hall_sensor/: hall.service
hall_sensor/src/: example_sensor.py  hall_sensor.py  main(NO MODULO).py  main.py  settings.py
lib/: __init__.py  bobtime.py  database.py  exceptions.py  log.py  pipe.py  utils.py
manager/: Dockerfile  manager.service
manager/src/: main.py  raspyManagment.py  raspy_sensors.py  requirements.txt  settings.py  timer.py
message/src/: main.py  message.py  messages.py  settings.py
messages/: messages.service
messages/src/: MqttMessage.py  main.py  messages.py  settings.py
modules/LED/: README.md  led.service  pyproject.toml
modules/accelerometer/: .gitignore  README.md  accelerometer.service  package_list.txt  pyproject.toml
modules/accelerometer/src/: __init__.py  accelerometer.py  main.py  mpu6050.py  raw_csv.py  requirements.txt  settings.py
modules/accelerometer/tests/: build_test.py
modules/alice/: alice.service  pyproject.toml
modules/ant/: .gitignore  README.md  ant.service  pyproject.toml
modules/ant/src/: __init__.py  ant_manager.py  device.py  hall.py  heartrate.py  main.py  pipe.py  powermeter.py  reader.py  settings.py  speed.py  timer.py
modules/ant/src/ant/: README.md
modules/ant/src/ant/base/: __init__.py  ant.py  driver.py
modules/ant/src/ant/easy/: __init__.py  channel.py  exception.py  node.py
modules/ant/src/source/: settings.json
modules/bobui/: pyproject.toml  sysdweb.service
modules/bobui/src/: bobcli.py  main.py  server.py
modules/bobui/src/templates/static/js/: sysdweb.js
modules/bobwebui/: .gitignore  bobwebui.service  package_list.txt  pyproject.toml
modules/bt/: README.md  bt.service  package_list.txt  pyproject.toml  start.sh
modules/can/: README.md  can.service  can_logger.sh  docs.md  policanbent.dbc  requirements.txt
modules/can_logger/: README.md  can_logger.service
modules/communication/: .gitignore  README.md  communication.service  pyproject.toml
modules/csv/: README.md  csv.service  pyproject.toml  test.service
modules/csv/src/: csv.py  main.py
modules/example_module/: example.service
modules/external_mqtt/: ext-mqtt.service  pyproject.toml
modules/external_mqtt/src/: main.py
modules/gear/: .gitignore  README.md  gear.service  pyproject.toml
modules/gpio/: README.md  gpio.service  pyproject.toml
modules/gps/: README.md  gps.service  pyproject.toml
modules/hall_sensor/: README.md  hall.service  pyproject.toml
modules/manager/: README.md  manager.service  pyproject.toml
modules/messages/: README.md  messages.service  pyproject.toml
modules/new_alice/: pyproject.toml
modules/new_alice/src/: main.py
modules/phoenix/: phoenix.service  pyproject.toml
modules/power_speed_target/: README.md  power_speed_target.service  pyproject.toml
modules/pyxbee_v2/: README.md  pyproject.toml  pyxbee_v2.service
modules/pyxbee_v3/: README.md  pyproject.toml  pyxbee_v3.service
modules/socketIO_server/: pyproject.toml
modules/socketIO_server/src/: main.py
modules/sofia/: README.md  pyproject.toml  sofia.service  start.sh
modules/video/: README.md  package_list.txt  pyproject.toml  requirements.txt  video.service
modules/video/src/: __init__.py  camera.py  colors.py  main.py  requirements.txt  settings.py  video.py
modules/weather/: README.md  pyproject.toml  weather.service
mosquitto/config/: mosquitto.conf
new_bt/: new_bt.service
new_bt/src/: main.py  newBt.py  requirements.txt
phoenix/: phoenix.service
phoenix/src/: main.py  settings.py
power_speed_target/: power_speed_target.service
pyxbee_v2/: pyxbee_v2.service
pyxbee_v3/: Dockerfile  pyxbee_v3.service
service_controller/: service_controller.service
tests/: core_test.py  sender.py
ui/: README.md  sysdweb.conf  sysdweb.service
ui/sysdweb/: server.py
utility/: BOB.service  ant-usb-sticks.rules  bob-core.service  bobcore.service  config.txt  rfcomm.conf  splashscreen.service
utility/example_module/: example.service  pyproject.toml
utility/example_module/src/: example_sensor.py  main.py
video/: Dockerfile  video.service
weather/: example.service  weather.service
(+100 files in other folders)
