[tool.poetry]
name = "accelerometer"
version = "0.1.0"
description = ""
authors = ["Marta Grassetti <mg.grassetti@gmail.com>", "Gabriele Belluardo <gabriele.belluardo@outlook.it>"]
license = "GPL-3.0-or-later"

# needed for custom project structure
packages = [
    { include = "src" },
]

[tool.poetry.scripts]
dev = "src.main:entry_point"


[tool.poetry.dependencies]
python = "^3.7.3"

policumbent-bob-core = "^0.1.0.post1"
smbus = "^1.1.post2"
mpu6050-raspberrypi = "^1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
autopep8 = "^1.6.0"
pytest = "^6.2.5"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"