[tool.poetry]
name = "csv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
# bob-core = { git = "https://github.com/policumbent/bob-core", rev = "main" }
policumbent-bob-core="^0.1.0.post1"

python = "^3.7.3"
paho-mqtt = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
