[tool.poetry]
name = "socketio-server"
version = "0.1.0"
description = "Initiates the server for the web socket protocol"
authors = ["ghiannir <ghiannir@gmail.com>"]
readme = "README.md"
packages = [{include = "socketio_server"}]

[tool.poetry.dependencies]
python = "3.7"
socketio = "^0.2.1"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
