[tool.poetry]
name = "example module"
version = "0.1.0"
description = ""
authors = [""]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
bob-core = { git = "https://github.com/policumbent/bob-core", rev = "main" }

# package deps
# ...
[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
autopep8 = "^1.6.0"
pytest = "^6.2.5"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
